left sidebar: Avoid unnecessary scrollbar.
This commit modifies the `#add-stream-link` element to be a `div`
containing the previous `a` element. The margin that was added to
`#stream-filters-container .simplebar-content` is then moved to that new
`div`.

This preserves the intended behaviour of the commit which introduced
the margin, to fix #12519 while removing an unnecessary scrollbar
which could hide the top-most stream in the stream list.

Fixes #13050

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -125,10 +125,6 @@ li.show-more-topics a {
     width: 100%;
 }
 
-#stream-filters-container .simplebar-content {
-    margin-bottom: 18px;
-}
-
 #private-container {
     max-height: 200px;
 }
@@ -147,6 +143,7 @@ li.show-more-topics a {
 #add-stream-link {
     text-decoration: none;
     margin-left: 10px;
+    margin-bottom: 18px;
 }
 
 #add-stream-link i {
